manifest/nodejs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: node-app
        image: quay.io/rh_ee_kmotojim/simple-stateful-app:red
        #ここを自分のコンテナレジストリのURLに変更します
        ports:
        - containerPort: 3000
