manifest/nodejs/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: route-simple-stateful-app
spec:
  to:
    kind: Service
    name: node-app-service
  port:
    targetPort: 3000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
